<resources>
    <string name="app_name">Waste of Time</string>

    <string name="reset">Reset Count</string>
    <string name="start">START</string>

    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="signin_failure">Unable to sign in.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="note_no_google_sign_in">You have to sign in to Google Play first</string>
    <string name="note_double_tap">Double Tap for more options</string>
    <string name="note_got_it">Got it</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="no_network">No network connection. Try again Later</string>
    <string name="report_issue">Report Issue</string>
    <string name="note_sorry_bug">Oops, this is a bug. Sorry!</string>
    <string name="error_report_subject_billing" translatable="false">Google Billing Error</string>
    <string name="error_report_body_billing" translatable="false">Google Billing through up and Error</string>
    <string name="note_purchase_successful">Purchase Successful. Congratulations!</string>
    <string name="classic">Classic</string>
    <string name="beat_the_clock">Faster than Time</string>
    <string name="secs_5" translatable="false">05.000</string>
    <string name="game_modes">Game Modes</string>
    <string name="highscore">Highscore: %d</string>
</resources>
