<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    tools:context="uk.co.pranacreative.timekiller.BeatTheClockActivity">

    <!-- The primary full-screen view. -->

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:textSize="30sp"
        android:textColor="#000000"
        android:background="@drawable/rounded_corners"
        android:text="@string/secs_5" />

    <TextView
        android:id="@+id/tv_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/highscore" />

    <TextView
        android:id="@+id/tv_added_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_time_left"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:text="+ Added Time"
        android:visibility="invisible" />

</RelativeLayout>
